--- a/style.css
+++ b/style.css
@@ -67,29 +67,227 @@ select{
     width: 100%;
     margin-top: 10px;
 }
-@media(max-width: 600px){
+@media(max-width: 480px){
     h1{
         font-size: 16px;
     }
     .title{
         margin-top: 2px;
-        margin-left: 100px;
-        width: 200px;
+        margin-left: 5px;
+        width: 100%;
     }
     .Reg{
-        width: 250px;
+        width: 255px;
         padding: 30px;
-        margin: 50px;
+        margin-right: 40px !important;
+        margin-left: 55px !important;
       
     }
     .form{
-        font-size: 14px;
-    }
-    select{
         font-size: 12px;
+    }
+
+    select{
+        font-size: 10px;
     }
    
     fieldset{
         padding: 5px;
+    }
+}
+@media(min-width: 481px) and (max-width: 1200px){
+    h1{
+        font-size: 20px;
+    }
+    .title{
+        margin-top: 20px;
+        margin-left: 5px;
+        width: 100%;
+    }
+    .Reg{
+        width: 80%;
+        padding: 30px;
+        margin-top: 40px;
+        margin-right: 60px !important;
+        margin-left: 80px !important;
+    }
+    .form{
+        font-size: 18px;
+    }
+
+    select{
+        font-size: 16px;
+    }
+   
+    fieldset{
+        padding: 10px;
+    }
+}
+@media(min-width: 1201px) and (max-width: 1600px){
+    h1{
+        font-size: 40px;
+    }
+    .title{
+        margin-top: 20px;
+        margin-left: 5px;
+        width: 100%;
+    }
+    .Reg{
+        width: 90%;
+        padding: 30px;
+        margin: 40px !important;
+      
+    }
+    .form{
+        font-size: 20px;
+    }
+
+    select{
+        font-size: 18px;
+    }
+   
+    fieldset{
+        padding: 20px;
+    }
+}
+@media(min-width: 1601px){
+    h1{
+        font-size: 50px;
+    }
+    .title{
+        margin-top: 20px;
+        margin-left: 5px;
+        width: 100%;
+    }
+    .Reg{
+        width: 90%;
+        height: 1000px;
+        padding: 50px;
+        margin: 100px !important;
+      
+    }
+    .form{
+        font-size: 30px;
+
+    }
+
+    select{
+        font-size: 20px;
+    }
+   
+    fieldset{
+        padding: 30px;
+    }
+}
+@media(max-width: 480px){
+    h1{
+        font-size: 16px;
+    }
+    .title{
+        margin-top: 2px;
+        margin-left: 5px;
+        width: 100%;
+    }
+    .Reg{
+        width: 255px;
+        padding: 30px;
+        margin-right: 40px !important;
+        margin-left: 55px !important;
+      
+    }
+    .form{
+        font-size: 12px;
+    }
+
+    select{
+        font-size: 10px;
+    }
+   
+    fieldset{
+        padding: 5px;
+    }
+}
+@media(min-width: 481px) and (max-width: 1200px){
+    h1{
+        font-size: 20px;
+    }
+    .title{
+        margin-top: 20px;
+        margin-left: 5px;
+        width: 100%;
+    }
+    .Reg{
+        width: 80%;
+        padding: 30px;
+        margin-top: 40px;
+        margin-right: 60px !important;
+        margin-left: 80px !important;
+    }
+    .form{
+        font-size: 18px;
+    }
+
+    select{
+        font-size: 16px;
+    }
+   
+    fieldset{
+        padding: 10px;
+    }
+}
+@media(min-width: 1201px) and (max-width: 1600px){
+    h1{
+        font-size: 40px;
+    }
+    .title{
+        margin-top: 20px;
+        margin-left: 5px;
+        width: 100%;
+    }
+    .Reg{
+        width: 90%;
+        padding: 30px;
+        margin: 40px !important;
+      
+    }
+    .form{
+        font-size: 20px;
+    }
+
+    select{
+        font-size: 18px;
+    }
+   
+    fieldset{
+        padding: 20px;
+    }
+}
+@media(min-width: 1601px){
+    h1{
+        font-size: 50px;
+    }
+    .title{
+        margin-top: 20px;
+        margin-left: 5px;
+        width: 100%;
+    }
+    .Reg{
+        width: 90%;
+        height: 1000px;
+        padding: 50px;
+        margin: 100px !important;
+      
+    }
+    .form{
+        font-size: 30px;
+
+    }
+
+    select{
+        font-size: 20px;
+    }
+   
+    fieldset{
+        padding: 30px;
     }
 }
